# hive-mind-mcp-server

./: README.md  pyproject.toml
src/: server.py
src/tools/: hive_tools.py
